@@ -1,5 +1,6 @@
 libmpdclient 2.8 (2012/??/??)
 * song: support attribute "Prio"
+* queue: fix the ranged "prio" command
 
 libmpdclient 2.7 (2012/02/04)
 * status: add nextsong/nextsongid support
